stream_responses app

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#Custom
+#donde reside la conexión local a snowflake
+.streamlit/secrets.toml 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
