--- a/.github/workflows/snowflake-fetch.yml
+++ b/.github/workflows/snowflake-fetch.yml
@@ -17,6 +17,8 @@ jobs:
           python-version: '3.10'
       - name: Install Python packages
         run: pip install -r requirements.txt
+      - name: Install Snowflake CLI
+        run: pip install snowflake-cli
       - name: Configure SnowCLI
         env:
           SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
