--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,6 @@ name: app_environment
 channels:
   - snowflake
 dependencies:
-  - streamlit==1.52.0
-  - snowflake-ml-python==1.20.0
-  - snowflake-snowpark-python==1.44.0
+  - streamlit
+  - snowflake-ml-python
+  - snowflake-snowpark-python
