--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-﻿streamlit
-snowflake-snowpark-python
-snowflake
+﻿streamlit==1.52.0
+snowflake-ml-python==1.20.0
+snowflake-snowpark-python==1.44.0
